--- a/customStyles.css
+++ b/customStyles.css
@@ -1,41 +1,41 @@
 .bg-img-none{
 background-image: none !important;
 }
-btn:hover{
+.btn:hover{
   box-shadow: none !important;
 }
-btn-primary:hover{
+.btn-primary:hover{
   color: #fff !important;
   background: #0a58ca !important;
 }
-btn-secondary:hover{
+.btn-secondary:hover{
   color: #fff !important;
   background: #5c636a !important;
 }
-btn-success:hover{
+.btn-success:hover{
   color: #fff !important;
   background: #157347 !important;
 }
-btn-warning:hover{
+.btn-warning:hover{
   color: #000 !important;
   background: #ffca2c !important;
 
 }
-btn-danger:hover{
+.btn-danger:hover{
   color: #fff !important;
   background: #bb2d3b!important;
 
 }
-btn-info:hover{
+.btn-info:hover{
   color: #000 !important;
   background: #31d2f2 !important;
 
 }
-btn-dark:hover{
+.btn-dark:hover{
   color: #fff !important;
   background:  #1c1f23
 }
-btn-light:hover{
+.btn-light:hover{
   color: #000 !important;
   background: #f9fafb !important;
 
