--- a/css/customStyles.css
+++ b/css/customStyles.css
@@ -43,8 +43,8 @@ background-image: none !important;
 $theme-colors: (
   purple: $purple
 );
-:root {
- --bs-purple: #51247A !important;
+.xmodule_display.xmodule_HtmlBlock .table th {
+ background: var(--bs-table-bg);
 }
 div.accordion h2{
   margin: 0px !important;
