--- a/css/customStyles.scss
+++ b/css/customStyles.scss
@@ -14,4 +14,4 @@ $utilities-colors: map-merge($utilities-colors, $theme-colors-rgb);
 $utilities-text-colors: map-loop($utilities-colors, rgba-css-var, "$key", "text");
 $utilities-bg-colors: map-loop($utilities-colors, rgba-css-var, "$key", "bg");
 
-@import "/Users/uqtscho3/node_modules/bootstrap";
+@import "/Users/uqtscho3/node_modules/bootstrap/scss/bootstrap.scss";
