--- a/css/customStyles.css
+++ b/css/customStyles.css
@@ -41,12 +41,12 @@ border-style: none !important;
   --bs-btn-border-color: var(--uqpurple);
   --bs-btn-border-radius: .5rem;
   --bs-btn-hover-color: var(--bs-white);
-  --bs-btn-hover-bg: #{shade-color(--uqpurple, 10%)};
-  --bs-btn-hover-border-color: #{shade-color(--uqpurple, 10%)};
+  --bs-btn-hover-bg: var(--uqpurplehover);
+  --bs-btn-hover-border-color: var(--uqpurple);
   --bs-btn-focus-shadow-rgb: var(--uqpurple);
   --bs-btn-active-color: var(--uqpurplehover);
-  --bs-btn-active-bg: #{shade-color(--uqpurple, 20%)};
-  --bs-btn-active-border-color: #{shade-color(--uqpurple, 20%)};
+  --bs-btn-active-bg: var(--uqpurplehover;
+  --bs-btn-active-border-color: var(--uqpurple);
 }
 
 .alert-uq {
