--- a/bootstrap-5.2.1-dist/css/bootstrap.css
+++ b/bootstrap-5.2.1-dist/css/bootstrap.css
@@ -37,6 +37,8 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
+  --bs-uqpurple: #51247A;
+  --bs-uqpurplehover: #962A8B;  
   --bs-primary-rgb: 13, 110, 253;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
@@ -49,6 +51,8 @@
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 33, 37, 41;
   --bs-body-bg-rgb: 255, 255, 255;
+  --bs-uqpurple-rgb: 81, 36, 122;
+  --bs-uqpurplehover-rgb: 150, 42, 139;
   --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
@@ -3010,6 +3014,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #212529;
 }
 
+.btn-uq {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #51247A;
+  --bs-btn-border-color: #51247A;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #962A8B;
+  --bs-btn-hover-border-color: #51247A;
+  --bs-btn-focus-shadow-rgb: 66, 70, 73;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #962A8B;
+  --bs-btn-active-border-color: #51247A;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #51247A;
+  --bs-btn-disabled-border-color: #51247A;  
+}
+
 .btn-outline-primary {
   --bs-btn-color: #0d6efd;
   --bs-btn-border-color: #0d6efd;
@@ -3143,6 +3164,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #212529;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #212529;
+  --bs-gradient: none;
+}
+
+.btn-outline-uq {
+  --bs-btn-color: #51247A;
+  --bs-btn-border-color: #51247A;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #51247A;
+  --bs-btn-hover-border-color: #51247A;
+  --bs-btn-focus-shadow-rgb: 33, 37, 41;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #51247A;
+  --bs-btn-active-border-color: #51247A;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #51247A;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #51247A;
   --bs-gradient: none;
 }
 
@@ -4747,6 +4785,15 @@ textarea.form-control-lg {
 }
 .alert-light .alert-link {
   color: #4f5050;
+}
+
+.alert-dark {
+  --bs-alert-color: #141619;
+  --bs-alert-bg: #d3d3d4;
+  --bs-alert-border-color: #bcbebf;
+}
+.alert-dark .alert-link {
+  color: #101214;
 }
 
 .alert-dark {
