update heading margin + faextension folder

--- a/bootstrap-5.2.1-dist/css/bootstrap.css
+++ b/bootstrap-5.2.1-dist/css/bootstrap.css
@@ -112,7 +112,7 @@ hr {
 
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
-  margin-bottom: 0.5rem !important;
+  margin-bottom: 0.75rem !important;
   font-weight: 500 !important;
   line-height: 1.2;
 }
@@ -381,6 +381,7 @@ button,
 [type=button],
 [type=reset],
 [type=submit] {
+  appearance: button;
   -webkit-appearance: button;
 }
 button:not(:disabled),
@@ -439,6 +440,7 @@ legend + * {
 
 [type=search] {
   outline-offset: -2px;
+  appearance: textfield;
   -webkit-appearance: textfield;
 }
 
@@ -451,6 +453,7 @@ legend + * {
 }
 */
 ::-webkit-search-decoration {
+  appearance: none;
   -webkit-appearance: none;
 }
 
@@ -460,11 +463,13 @@ legend + * {
 
 ::-webkit-file-upload-button {
   font: inherit;
+  appearance: button;
   -webkit-appearance: button;
 }
 
 ::file-selector-button {
   font: inherit;
+  appearance: button;
   -webkit-appearance: button;
 }
 
